0030556: Coding - IGESData_GlobalSection missing member initialization in default constructor

IGESData_GlobalSection now initializes class fields.